; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-db/extr_rmsgpack_dom.c_dom_reader_state_push.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-db/extr_rmsgpack_dom.c_dom_reader_state_push.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dom_reader_state = type { i32, %struct.rmsgpack_dom_value** }
%struct.rmsgpack_dom_value = type { i32 }

@MAX_DEPTH = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dom_reader_state*, %struct.rmsgpack_dom_value*)* @dom_reader_state_push to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dom_reader_state_push(%struct.dom_reader_state* %0, %struct.rmsgpack_dom_value* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.dom_reader_state*, align 8
  %5 = alloca %struct.rmsgpack_dom_value*, align 8
  store %struct.dom_reader_state* %0, %struct.dom_reader_state** %4, align 8
  store %struct.rmsgpack_dom_value* %1, %struct.rmsgpack_dom_value** %5, align 8
  %6 = load %struct.dom_reader_state*, %struct.dom_reader_state** %4, align 8
  %7 = getelementptr inbounds %struct.dom_reader_state, %struct.dom_reader_state* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = add nsw i32 %8, 1
  %10 = load i32, i32* @MAX_DEPTH, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = load i32, i32* @ENOMEM, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %3, align 4
  br label %29

15:                                               ; preds = %2
  %16 = load %struct.dom_reader_state*, %struct.dom_reader_state** %4, align 8
  %17 = getelementptr inbounds %struct.dom_reader_state, %struct.dom_reader_state* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %17, align 8
  %20 = load %struct.rmsgpack_dom_value*, %struct.rmsgpack_dom_value** %5, align 8
  %21 = load %struct.dom_reader_state*, %struct.dom_reader_state** %4, align 8
  %22 = getelementptr inbounds %struct.dom_reader_state, %struct.dom_reader_state* %21, i32 0, i32 1
  %23 = load %struct.rmsgpack_dom_value**, %struct.rmsgpack_dom_value*** %22, align 8
  %24 = load %struct.dom_reader_state*, %struct.dom_reader_state** %4, align 8
  %25 = getelementptr inbounds %struct.dom_reader_state, %struct.dom_reader_state* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds %struct.rmsgpack_dom_value*, %struct.rmsgpack_dom_value** %23, i64 %27
  store %struct.rmsgpack_dom_value* %20, %struct.rmsgpack_dom_value** %28, align 8
  store i32 0, i32* %3, align 4
  br label %29

29:                                               ; preds = %15, %12
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
